--- a/CCG/src/application/Match.fxml
+++ b/CCG/src/application/Match.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.72" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.MatchController">
+<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.91" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.MatchController">
    <children>
       <AnchorPane prefHeight="200.0" prefWidth="200.0" />
       <VBox prefHeight="200.0" prefWidth="100.0">
@@ -16,7 +16,7 @@
             <HBox fx:id="opponentField" prefHeight="200.0" prefWidth="200.0" />
             <ButtonBar prefHeight="40.0" prefWidth="200.0">
               <buttons>
-                  <Button fx:id="endTurn" contentDisplay="RIGHT" mnemonicParsing="false" text="End Turn" />
+                  <Button fx:id="endTurn" contentDisplay="RIGHT" mnemonicParsing="false" onMouseClicked="#endTurn" text="End Turn" />
               </buttons>
             </ButtonBar>
             <HBox fx:id="localPlayerField" prefHeight="200.0" prefWidth="200.0" />
