--- a/CCG/src/application/CardEditor.fxml
+++ b/CCG/src/application/CardEditor.fxml
@@ -37,7 +37,7 @@
       </MenuBar>
       <SplitPane dividerPositions="0.21205007824726135" prefHeight="800.0" prefWidth="1280.0">
         <items>
-            <TreeView fx:id="cardList" prefHeight="773.0" prefWidth="446.0" />
+            <TreeView fx:id="cardList" onMouseClicked="#selectItem" prefHeight="773.0" prefWidth="446.0" />
             <TabPane fx:id="cardTabs" prefHeight="773.0" prefWidth="911.0" tabClosingPolicy="UNAVAILABLE" />
         </items>
       </SplitPane>
