Added better UI logic
Made Match.fxml stack the end turn button on top of the rest of the UI
and added spacing between cards.

Made players get cards made of random minions.

--- a/CCG/src/application/Match.fxml
+++ b/CCG/src/application/Match.fxml
@@ -1,27 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ButtonBar?>
-<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.91" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.MatchController">
+<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" style="-fx-background-color: transparent;" xmlns="http://javafx.com/javafx/8.0.91" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.MatchController">
    <children>
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" />
       <VBox prefHeight="200.0" prefWidth="100.0">
          <children>
-            <HBox fx:id="opponentHand" prefHeight="200.0" prefWidth="200.0" styleClass="hand" />
-            <HBox fx:id="opponentField" prefHeight="200.0" prefWidth="200.0" />
-            <ButtonBar prefHeight="40.0" prefWidth="200.0">
-              <buttons>
-                  <Button fx:id="endTurn" contentDisplay="RIGHT" mnemonicParsing="false" onMouseClicked="#endTurn" text="End Turn" />
-              </buttons>
-            </ButtonBar>
-            <HBox fx:id="localPlayerField" prefHeight="200.0" prefWidth="200.0" />
-            <HBox fx:id="playerHand" prefHeight="200.0" prefWidth="200.0" />
+            <HBox fx:id="opponentHand" prefHeight="200.0" prefWidth="200.0" spacing="15.0" styleClass="hand" />
+            <HBox fx:id="opponentField" prefHeight="200.0" prefWidth="200.0" spacing="15.0" />
+            <HBox fx:id="playerField" prefHeight="200.0" prefWidth="200.0" spacing="15.0" />
+            <HBox fx:id="playerHand" prefHeight="200.0" prefWidth="200.0" spacing="15.0" styleClass="hand" />
          </children>
       </VBox>
+      <Pane nodeOrientation="RIGHT_TO_LEFT" pickOnBounds="false" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: null;" StackPane.alignment="CENTER_LEFT">
+         <children>
+            <Button fx:id="endTurn" alignment="CENTER" contentDisplay="CENTER" layoutY="380.0" mnemonicParsing="false" onMouseClicked="#endTurn" pickOnBounds="false" prefHeight="40.0" prefWidth="185.0" text="End Turn" />
+         </children>
+      </Pane>
    </children>
 </StackPane>
